--- a/fashion.ipynb
+++ b/fashion.ipynb
@@ -136,6 +136,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9, 2, 1, ..., 8, 1, 5], dtype=int64)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [],
@@ -145,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -154,20 +174,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Class 0       0.65      0.88      0.75      1000\n",
-      "     Class 1       1.00      0.96      0.98      1000\n",
-      "     Class 2       0.84      0.81      0.82      1000\n",
-      "     Class 3       0.89      0.89      0.89      1000\n",
-      "     Class 4       0.83      0.77      0.80      1000\n",
-      "     Class 5       0.98      0.97      0.97      1000\n",
-      "     Class 6       0.72      0.57      0.64      1000\n",
-      "     Class 7       0.94      0.97      0.95      1000\n",
-      "     Class 8       0.96      0.96      0.96      1000\n",
-      "     Class 9       0.98      0.94      0.96      1000\n",
+      "     Class 0       0.67      0.90      0.76      1000\n",
+      "     Class 1       0.98      0.98      0.98      1000\n",
+      "     Class 2       0.88      0.81      0.84      1000\n",
+      "     Class 3       0.96      0.79      0.87      1000\n",
+      "     Class 4       0.78      0.91      0.84      1000\n",
+      "     Class 5       0.97      0.99      0.98      1000\n",
+      "     Class 6       0.76      0.59      0.66      1000\n",
+      "     Class 7       0.95      0.97      0.96      1000\n",
+      "     Class 8       0.97      0.97      0.97      1000\n",
+      "     Class 9       0.99      0.93      0.96      1000\n",
       "\n",
-      "    accuracy                           0.87     10000\n",
-      "   macro avg       0.88      0.87      0.87     10000\n",
-      "weighted avg       0.88      0.87      0.87     10000\n",
+      "    accuracy                           0.88     10000\n",
+      "   macro avg       0.89      0.88      0.88     10000\n",
+      "weighted avg       0.89      0.88      0.88     10000\n",
       "\n"
      ]
     }
@@ -175,7 +195,7 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "target_names=[\"Class {}\".format(i) for i in range(10)]\n",
-    "print(classification_report(test_Y, predicted_classes, target_names=target_names))"
+    "print(classification_report(test_Y, predicted_values, target_names=target_names))"
    ]
   },
   {
